# poc_flask_rest_mongoengine_admin

./: .flake8  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
poc/: __init__.py
poc/apis/: __init__.py  billing.py
poc/billing/: admin.py  models.py
tests/: conftest.py  test_models.py
